--- a/sample_user_config.json
+++ b/sample_user_config.json
@@ -1,9 +1,9 @@
 {
     "extra_cmdline": {
-        "pid": "0x0001",
-        "vid": "0x46f4",
-        "sn": "1234XXX123",
-        "mac1": "XXYYXXYYXXYY"
+        "pid": "0x5591",
+        "vid": "0x0781",
+        "sn": "2022NAS123456",
+        "mac1": "c4346b5cddef"
     },
     "synoinfo": {},
     "ramdisk_copy": {},
